--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,8 @@
     <script src="templates/material-user-interface/default-user-interface/js/controllers.js"></script>
     <script src="templates/themes/menu-dashboard/js/controllers.js"></script>
     <script src="templates/themes/expense-dashboard/js/controllers.js"></script>
+    <script src="templates/themes/expense-dashboard/social-share/js/controllers.js"></script>
+    <script src="templates/themes/expense-dashboard/social-share2/js/controllers.js"></script>
     <script src="templates/themes/catalog/js/controllers.js"></script>
     <script src="templates/push-notification/single-push-notification/js/controllers.js"></script>
     <script src="templates/push-notification/schedule-push-notification/js/controllers.js"></script>
